@@ -7,6 +7,9 @@ lib_LTLIBRARIES = libgpsimcli.la
 libgpsimcli_la_SOURCES = \
 	parse.yy \
 	scan.ll \
+	expr.cc \
+	operator.cc \
+	viewable.cc \
 	cmd_attach.cc \
 	cmd_break.cc \
 	cmd_bus.cc \
@@ -41,7 +44,8 @@ libgpsimcli_la_SOURCES = \
 	 cmd_trace.h cmd_stopwatch.h \
 	input.h cmd_clear.h cmd_help.h cmd_processor.h cmd_set.h cmd_step.h \
 	cmd_version.h misc.h cmd_disasm.h  cmd_list.h  cmd_quit.h \
-	cmd_stimulus.h cmd_x.h symbol_t.h cmd_frequency.h cmd_icd.h
+	cmd_stimulus.h cmd_x.h symbol_t.h cmd_frequency.h cmd_icd.h \
+	expr.h operator.h viewable.h
 
 
 YFLAGS = -dvt
